# roborts-mas

./: LICENSE  README.md  auto_start.sh  base.md  costmap_and_detection.md  gazebo_sim.md  imu_serial.md  localization.md  一些常用的命令.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/lsx10/: README.md
src/lsx10/lslidar_x10/: CMakeLists.txt  package.xml
src/lsx10/lslidar_x10_driver/: CMakeLists.txt  package.xml
src/lsx10/lslidar_x10_driver/include/lslidar_x10_driver/: input.h  lsiosr.h  lslidar_x10_driver.h
src/lsx10/lslidar_x10_driver/launch/: gmapping.launch  gmapping_demo.launch  lslidar_x10_net.launch  lslidar_x10_net_double.launch  lslidar_x10_net_four.launch  lslidar_x10_serial.launch  lslidar_x10_serial_double.launch  lslidar_x10_serial_four.launch  rmuc_navigation.launch
src/lsx10/lslidar_x10_driver/rviz/: lslidar.rviz  mapping.rviz
src/lsx10/lslidar_x10_driver/src/: input.cc  lsiosr.cpp  lslidar_x10_driver.cc  lslidar_x10_driver_node.cc
src/lsx10/lslidar_x10_msgs/: CMakeLists.txt  package.xml
src/lsx10/lslidar_x10_msgs/msg/: LslidarX10Scan.msg  LslidarX10Sweep.msg
src/robortsmas/laser_detection/: CMakeLists.txt  package.xml
src/robortsmas/laser_detection/include/laser_detection/: cost_map.h  laser_detection.h
src/robortsmas/laser_detection/src/: cost_map_points.cpp  laser_detection.cpp  laser_object.cpp  laser_tracking.cpp
src/robortsmas/roborts_base/: CMakeLists.txt
src/robortsmas/roborts_base/config/: base.yaml
src/robortsmas/roborts_base/roborts_sdk/src/: protocol.cpp
src/robortsmas/roborts_base/src/: chassis.cpp  gimbal.cpp  referee_system.cpp  roborts_base_node.cpp
src/robortsmas/roborts_bringup/: localization_test.launch
src/robortsmas/roborts_bringup/launch/: armor_detection.launch  base.launch  image_publisher.launch  localization_test_brimon.launch  move_base_brimon.launch  roborts.launch  roborts_gazebo.launch  roborts_stage.launch  static_tf.launch  test_costmap.launch  usb_cam.launch
src/robortsmas/roborts_bringup/maps/: map2.pgm  my_map.pgm  rmul2023.pgm  rmul2023.yaml  rmul2023v2.pgm  rmul2023v2.yaml
src/robortsmas/roborts_bringup/params/: camera_params.xml  hikvision.yaml
src/robortsmas/roborts_bringup/rviz/: roborts.rviz  roborts_brimon.rviz  roborts_gazebo.rviz  roborts_test_costmap.rviz
src/robortsmas/roborts_bringup/urdf/: sentry.urdf
src/robortsmas/roborts_bringup/worlds/: rmul2023.world  rmul2023v2.world
src/robortsmas/roborts_camera/: CMakeLists.txt  camera_param.h
src/robortsmas/roborts_camera/config/: camera_param.prototxt
src/robortsmas/roborts_camera/proto/: camera_param.pb.cc  camera_param.pb.h
src/robortsmas/roborts_camera/test/: image_capture.cpp
src/robortsmas/roborts_camera/uvc/: uvc_driver.cpp
src/robortsmas/roborts_costmap/config/: costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  dynamic_obstacle_layer_config.prototxt  inflation_layer_config_min.prototxt
src/robortsmas/roborts_costmap/include/costmap/: costmap_interface.h
src/robortsmas/roborts_costmap/proto/: costmap_parameter_setting.pb.cc  costmap_parameter_setting.pb.h  costmap_parameter_setting.proto  local_static_layer_setting.pb.cc  local_static_layer_setting.pb.h
src/robortsmas/roborts_costmap/src/: costmap_interface.cpp  detection_layer.cpp  dynamic_obstacle_layer.cpp  local_static_layer.cpp
src/robortsmas/roborts_decision/: CMakeLists.txt  behavior_test.cpp
src/robortsmas/roborts_decision/config/: decision.prototxt
src/robortsmas/roborts_decision/example_behavior/: chase_behavior.h  patrol_behavior.h
src/robortsmas/roborts_decision/executor/: chassis_executor.cpp  gimbal_executor.cpp
src/robortsmas/roborts_decision/proto/: decision.pb.cc  decision.pb.h
src/robortsmas/roborts_detection/: CMakeLists.txt
src/robortsmas/roborts_detection/armor_detection/: CMakeLists.txt  armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.h  gimbal_control.cpp
src/robortsmas/roborts_detection/armor_detection/config/: armor_detection.prototxt
src/robortsmas/roborts_detection/armor_detection/constraint_set/: constraint_set.cpp  constraint_set.h
src/robortsmas/roborts_detection/armor_detection/constraint_set/proto/: constraint_set.pb.cc  constraint_set.pb.h
src/robortsmas/roborts_detection/armor_detection/proto/: armor_detection.pb.cc  armor_detection.pb.h
src/robortsmas/roborts_detection/util/: cv_toolbox.h
src/robortsmas/roborts_localization/: localization_node.cpp
src/robortsmas/roborts_localization/amcl/: amcl.cpp
src/robortsmas/roborts_localization/config/: localization.yaml
src/robortsmas/roborts_msgs/: CMakeLists.txt
src/robortsmas/roborts_planning/global_planner/: CMakeLists.txt  global_planner_test.cpp
src/robortsmas/roborts_planning/global_planner/a_star_planner/: CMakeLists.txt
src/robortsmas/roborts_planning/local_planner/: CMakeLists.txt
src/robortsmas/roborts_planning/local_planner/src/: vel_converter.cpp
src/robortsmas/roborts_planning/local_planner/timed_elastic_band/include/timed_elastic_band/: teb_vertex_timediff.h
src/robortsmas/roborts_planning/local_planner/timed_elastic_band/src/: teb_local_planner.cpp
src/robortsmas/roborts_planning/planning_param/: costmap_common_params.yaml  local_costmap_params.yaml  planner.yaml
src/robortsmas/roborts_tracking/: CMakeLists.txt  tracking_test.cpp  tracking_utility.h
src/robortsmas/roborts_tracking/KCFcpp/: CMakeLists.txt
src/robortsmas/roborts_tracking/KCFcpp/src/: kcftracker.cpp  recttools.hpp
src/videototopic/: CMakeLists.txt  package.xml
src/videototopic/config/: videototopic.yaml
src/videototopic/src/: videototopic.cpp
