<?xml version="1.0"?>
<package format="2">
  <name>videototopic</name>
  <version>0.0.0</version>
  <description>The videototopic package</description>

  <maintainer email="1610937885@qq.com">brimon</maintainer>

  <license>GPL 3.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>

  <export>
  </export>
</package>
