<package>

  <name>lslidar_x10</name>
  <version>1.2.0</version>
  <description>
    Basic ROS support for the Leishen M10 and N10 LIDARs.
  </description>
  <maintainer email="honghangli@lslidar.com">Nick Li</maintainer>
  <author>Nick Li</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_x10_driver</run_depend>
  <run_depend>lslidar_x10_msgs</run_depend>
  <run_depend>lslidar_x10_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
